// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@kopflos-cms/plugin-deploy-resources onStart enabled applies base 1`] = `
"<http://example.org/bar> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Bar> <http://example.org/bar> .
"
`;

exports[`@kopflos-cms/plugin-deploy-resources onStart enabled deploys trig 1`] = `
"<http://example.org/foo> <http://example.org/bar> \\"bar\\" <http://example.org/foo> .
<http://example.org/foo> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Foo> <http://example.org/foo> .
"
`;

exports[`@kopflos-cms/plugin-deploy-resources watch disabled does not react to any changes 1`] = `
"<http://example.org/bar> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Bar> <http://example.org/bar> .
<http://example.org/bar> <urn:talos:action> <urn:talos:overwrite> <urn:talos:resources> .
<http://example.org/bar> <urn:talos:environmentRepresentation> <urn:talos:default> <urn:talos:resources> .
<http://example.org/foo> <http://example.org/bar> \\"bar\\" <http://example.org/foo> .
<http://example.org/foo> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Foo> <http://example.org/foo> .
<http://example.org/foo> <urn:talos:action> <urn:talos:overwrite> <urn:talos:resources> .
<http://example.org/foo> <urn:talos:environmentRepresentation> <urn:talos:default> <urn:talos:resources> .
<urn:talos:resources> <urn:talos:action> <urn:talos:overwrite> <urn:talos:resources> .
"
`;

exports[`@kopflos-cms/plugin-deploy-resources watch enabled redeploys when file changes 1`] = `
"<http://example.org/bar> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Bar> <http://example.org/bar> .
<http://example.org/bar> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Baz> <http://example.org/bar> .
"
`;

exports[`@kopflos-cms/plugin-deploy-resources watch enabled redeploys when file is created 1`] = `
"<http://example.org/baz> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Baz> <http://example.org/baz> .
"`;
